--- a/app/src/main/res/layout/fragment_greet.xml
+++ b/app/src/main/res/layout/fragment_greet.xml
@@ -11,6 +11,7 @@
         android:id="@+id/bgCon"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/greet_img_bg"
         tools:context=".view.fragment.GreetFragment">
 
         <SurfaceView
@@ -59,14 +60,16 @@
             app:textSize="30sp" />
 
 
-
         <Button
             android:id="@+id/end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/btn_bg"
             android:text="结束任务"
-            android:textSize="@dimen/dp_40"
+            android:textColor="#FADDAA"
+            android:textSize="@dimen/sp_40"
+            android:elevation="@dimen/dp_80"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
