--- a/app/src/main/res/layout/fragment_app_content.xml
+++ b/app/src/main/res/layout/fragment_app_content.xml
@@ -28,20 +28,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.sendi.deliveredrobot.view.widget.ExpandableHeightGridView
+        <GridView
             android:id="@+id/applicationGv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_30"
-            android:layout_marginEnd="@dimen/dp_30"
-            android:layout_marginBottom="@dimen/dp_120"
-            android:horizontalSpacing="@dimen/dp_22"
-            android:numColumns="4"
-            android:verticalSpacing="@dimen/dp_50"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:horizontalSpacing="@dimen/dp_40"
+            android:verticalSpacing="@dimen/dp_64"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/applicationName" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
             android:id="@+id/ll_return"
