--- a/app/src/main/res/layout/fragment_businessing.xml
+++ b/app/src/main/res/layout/fragment_businessing.xml
@@ -13,42 +13,11 @@
         android:background="@drawable/bg_business"
         android:layout_height="match_parent">
 
-        <com.sendi.deliveredrobot.view.widget.AdvanceView
-            android:id="@+id/pointImage"
-            android:layout_width="0dp"
+        <include
+            android:id="@+id/include"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/horizontalTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_32"
-            android:layout_marginEnd="@dimen/dp_32"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!--80大 60中 40小 -->
-        <com.sendi.deliveredrobot.view.widget.VerticalTextView
-            android:id="@+id/verticalTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_32"
-            android:layout_marginEnd="@dimen/dp_32"
-            app:columnLength="8"
-            app:isCharCenter="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:textSize="30sp" />
+            layout="@layout/touch_show_layout"/>
 
 
 
