--- a/app/src/main/res/layout/fragment_greet.xml
+++ b/app/src/main/res/layout/fragment_greet.xml
@@ -14,66 +14,12 @@
         android:background="@drawable/greet_img_bg"
         tools:context=".view.fragment.GreetFragment">
 
-        <SurfaceView
-            android:id="@+id/SurfaceView"
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
 
-        <com.sendi.deliveredrobot.view.widget.AdvanceView
-            android:id="@+id/pointImage"
-            android:layout_width="0dp"
+        <include
+            android:id="@+id/include"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <TextView
-            android:id="@+id/horizontalTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_32"
-            android:layout_marginEnd="@dimen/dp_32"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!--80大 60中 40小 -->
-        <com.sendi.deliveredrobot.view.widget.VerticalTextView
-            android:id="@+id/verticalTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_32"
-            android:layout_marginEnd="@dimen/dp_32"
-            app:columnLength="8"
-            app:isCharCenter="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:textSize="30sp" />
-
-
-        <Button
-            android:id="@+id/end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/btn_bg"
-            android:text="结束任务"
-            android:textColor="#FADDAA"
-            android:textSize="@dimen/sp_40"
-            android:elevation="@dimen/dp_80"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            layout="@layout/touch_show_layout"/>
 
         <ImageView
             android:id="@+id/argPic"
