--- a/app/src/main/res/layout/fragment_going_greet.xml
+++ b/app/src/main/res/layout/fragment_going_greet.xml
@@ -7,17 +7,22 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bg_business"
         tools:context=".view.fragment.GoingGreetFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
             android:id="@+id/goingPoint"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="0.9"
+            android:textColor="@color/white"
+            android:textSize="64sp"
             android:gravity="center"
-            android:textSize="@dimen/sp_40"
+            android:layout_gravity="center"
             android:text="@string/business_going" />
 
     </FrameLayout>
