--- a/app/src/main/res/layout/fragment_greet.xml
+++ b/app/src/main/res/layout/fragment_greet.xml
@@ -19,15 +19,20 @@
             android:id="@+id/include"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            layout="@layout/touch_show_layout"/>
+            layout="@layout/touch_show_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/argPic"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
