--- a/app/src/main/res/layout/fragment_basic_setting.xml
+++ b/app/src/main/res/layout/fragment_basic_setting.xml
@@ -193,7 +193,7 @@
                     android:id="@+id/explanation"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
-                    android:layout_marginStart="@dimen/dp_80"
+                    android:layout_marginStart="40dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
                     app:layout_constraintBottom_toBottomOf="@+id/textView6"
@@ -243,7 +243,7 @@
                     android:id="@+id/application"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
-                    android:layout_marginStart="@dimen/dp_80"
+                    android:layout_marginStart="40dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
                     app:layout_constraintBottom_toBottomOf="@+id/textView5"
@@ -267,7 +267,7 @@
                     android:id="@+id/business"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
-                    android:layout_marginStart="@dimen/dp_80"
+                    android:layout_marginStart="40dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
                     app:layout_constraintBottom_toBottomOf="@+id/textView15"
@@ -320,12 +320,23 @@
                     android:id="@+id/Etiquette_welcome"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
+                    android:layout_marginStart="40dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
-                    android:layout_marginStart="@dimen/dp_80"
                     app:layout_constraintBottom_toBottomOf="@+id/businessTv"
                     app:layout_constraintStart_toEndOf="@+id/businessTv"
                     app:layout_constraintTop_toTopOf="@+id/businessTv" />
+
+                <CheckBox
+                    android:id="@+id/one_key_call_phone"
+                    android:layout_width="@dimen/dp_24"
+                    android:layout_height="@dimen/dp_24"
+                    android:layout_marginStart="40dp"
+                    android:background="@drawable/checkbox"
+                    android:button="@null"
+                    app:layout_constraintBottom_toBottomOf="@+id/Etiquette_welcomeTv"
+                    app:layout_constraintStart_toEndOf="@+id/Etiquette_welcomeTv"
+                    app:layout_constraintTop_toTopOf="@+id/Etiquette_welcomeTv" />
 
                 <TextView
                     android:id="@+id/Etiquette_welcomeTv"
@@ -339,6 +350,19 @@
                     app:layout_constraintBottom_toBottomOf="@+id/Etiquette_welcome"
                     app:layout_constraintStart_toEndOf="@+id/Etiquette_welcome"
                     app:layout_constraintTop_toTopOf="@+id/Etiquette_welcome" />
+
+                <TextView
+                    android:id="@+id/call_phone_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_6"
+                    android:alpha="0.7"
+                    android:text="@string/one_key_call_phone"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_24"
+                    app:layout_constraintBottom_toBottomOf="@+id/one_key_call_phone"
+                    app:layout_constraintStart_toEndOf="@+id/one_key_call_phone"
+                    app:layout_constraintTop_toTopOf="@+id/one_key_call_phone" />
 
 <!--                <CheckBox-->
 <!--                    android:id="@+id/black"-->
