--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -139,5 +139,6 @@
     <color name="color_E5FFFFFF">#E5FFFFFF</color>
     <color name="color_FF00EEFF">#FF00EEFF</color>
     <color name="color_1A00EEFF">#1A00EEFF</color>
+    <color name="color_4D000000">#4D000000</color>
 
 </resources>
