一键呼叫弹窗字体颜色

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -140,5 +140,6 @@
     <color name="color_FF00EEFF">#FF00EEFF</color>
     <color name="color_1A00EEFF">#1A00EEFF</color>
     <color name="color_33FFFFFF">#33FFFFFF</color>
+    <color name="color_99FFFFFF">#99FFFFFF</color>
 
 </resources>
