到点播报流程改造

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -113,7 +113,7 @@
 
     <fragment
         android:id="@+id/explanArriveFragment"
-        android:name="com.sendi.deliveredrobot.view.fragment.ExplanArriveFragment"
+        android:name="com.sendi.deliveredrobot.view.fragment.ExplainArriveFragment"
         android:label="fragment_explan_arrive"
         tools:layout="@layout/fragment_explan_arrive">
         <action
