修改UpdateReturn为静态类，修改一些变量名称

--- a/app/src/main/res/layout/fragment_start_explantion.xml
+++ b/app/src/main/res/layout/fragment_start_explantion.xml
@@ -197,7 +197,7 @@
                         android:textSize="40sp"
                         tools:ignore="HardcodedText" />
                     <TextView
-                        android:id="@+id/PauseTV"
+                        android:id="@+id/pauseTV"
                         android:layout_width="@dimen/dp_204"
                         android:layout_height="@dimen/dp_72"
                         android:layout_marginEnd="@dimen/dp_32"
@@ -207,7 +207,8 @@
                         android:text="@string/already_explain"
                         android:visibility="gone"
                         android:textColor="@color/white"
-                        android:textSize="32sp" />
+                        android:textSize="32sp"
+                        tools:visibility="visible"/>
 
                 </LinearLayout>
 
@@ -299,13 +300,13 @@
                         android:layout_marginBottom="@dimen/dp_24"
                         android:alpha="0.7"
                         android:background="@color/white"
-                        app:layout_constraintBottom_toTopOf="@+id/acceptstationTv"
-                        app:layout_constraintEnd_toEndOf="@+id/acceptstationTv"
-                        app:layout_constraintStart_toStartOf="@+id/acceptstationTv" />
+                        app:layout_constraintBottom_toTopOf="@+id/accept_station_tv"
+                        app:layout_constraintEnd_toEndOf="@+id/accept_station_tv"
+                        app:layout_constraintStart_toStartOf="@+id/accept_station_tv" />
 
 
                     <com.sendi.deliveredrobot.view.widget.SongLyricTextView
-                        android:id="@+id/acceptstationTv"
+                        android:id="@+id/accept_station_tv"
                         android:layout_width="368dp"
                         android:layout_height="@dimen/dp_345"
                         android:layout_marginEnd="@dimen/dp_26"
