--- a/app/src/main/res/layout/fragment_basic_setting.xml
+++ b/app/src/main/res/layout/fragment_basic_setting.xml
@@ -193,7 +193,7 @@
                     android:id="@+id/explanation"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="12dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
                     app:layout_constraintBottom_toBottomOf="@+id/textView6"
@@ -243,7 +243,7 @@
                     android:id="@+id/application"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="12dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
                     app:layout_constraintBottom_toBottomOf="@+id/textView5"
@@ -267,7 +267,7 @@
                     android:id="@+id/business"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="12dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
                     app:layout_constraintBottom_toBottomOf="@+id/textView15"
@@ -320,7 +320,7 @@
                     android:id="@+id/Etiquette_welcome"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="12dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
                     app:layout_constraintBottom_toBottomOf="@+id/businessTv"
@@ -331,7 +331,7 @@
                     android:id="@+id/one_key_call_phone"
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="@dimen/dp_24"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="12dp"
                     android:background="@drawable/checkbox"
                     android:button="@null"
                     app:layout_constraintBottom_toBottomOf="@+id/Etiquette_welcomeTv"
@@ -363,6 +363,30 @@
                     app:layout_constraintBottom_toBottomOf="@+id/one_key_call_phone"
                     app:layout_constraintStart_toEndOf="@+id/one_key_call_phone"
                     app:layout_constraintTop_toTopOf="@+id/one_key_call_phone" />
+
+                <CheckBox
+                    android:id="@+id/conversation"
+                    android:layout_width="@dimen/dp_24"
+                    android:layout_height="@dimen/dp_24"
+                    android:layout_marginStart="12dp"
+                    android:background="@drawable/checkbox"
+                    android:button="@null"
+                    app:layout_constraintBottom_toBottomOf="@+id/call_phone_tv"
+                    app:layout_constraintStart_toEndOf="@+id/call_phone_tv"
+                    app:layout_constraintTop_toTopOf="@+id/call_phone_tv" />
+
+                <TextView
+                    android:id="@+id/conversation_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_6"
+                    android:alpha="0.7"
+                    android:text="@string/conversation"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_24"
+                    app:layout_constraintBottom_toBottomOf="@+id/conversation"
+                    app:layout_constraintStart_toEndOf="@+id/conversation"
+                    app:layout_constraintTop_toTopOf="@+id/conversation" />
 
 <!--                <CheckBox-->
 <!--                    android:id="@+id/black"-->
