--- a/app/src/main/res/layout/fragment_start_explantion.xml
+++ b/app/src/main/res/layout/fragment_start_explantion.xml
@@ -332,7 +332,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/view26">
 
                     <Button
-                        android:id="@+id/PauseBtn"
+                        android:id="@+id/pauseBtn"
                         android:layout_width="@dimen/dp_204"
                         android:layout_height="@dimen/dp_72"
                         android:layout_marginEnd="@dimen/dp_32"
