--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -386,6 +386,7 @@
     <dimen name="dp_410">410dp</dimen>
     <dimen name="dp_422">422dp</dimen>
     <dimen name="dp_436">436dp</dimen>
+    <dimen name="dp_456">456dp</dimen>
     <dimen name="dp_472">472dp</dimen>
     <dimen name="dp_500">500dp</dimen>
     <dimen name="dp_600">600dp</dimen>
