--- a/app/src/main/res/layout/guide_select_item.xml
+++ b/app/src/main/res/layout/guide_select_item.xml
@@ -6,10 +6,11 @@
     android:layout_height="wrap_content">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/CLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@drawable/select_item_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,23 +22,30 @@
             android:layout_height="@dimen/dp_200"
             tools:src="@tools:sample/avatars"
             android:scaleType="fitXY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:visibility="gone"
+            tools:visibility="gone"/>
+        <TextView
+            android:id="@+id/tv_point_name"
+            android:background="@drawable/shape_gradient_ff1da8fe_ff295dd2_corners_12dp"
+            android:layout_width="@dimen/dp_248"
+            android:layout_height="@dimen/dp_200"
+            android:visibility="gone"
+            android:textColor="@color/color_E5FFFFFF"
+            android:gravity="center"
+            tools:visibility="visible"
+
+            />
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/dp_248"
+            android:translationY="-48dp"
             android:layout_height="48dp"
             android:background="@drawable/guide_select_tv_bg"
             android:gravity="center"
             android:text="@string/name"
             android:textColor="@drawable/text_select_bg"
-            android:textSize="@dimen/sp_28"
-            app:layout_constraintBottom_toBottomOf="@+id/ivGuideRound"
-            app:layout_constraintEnd_toEndOf="@+id/ivGuideRound"
-            app:layout_constraintStart_toStartOf="@+id/ivGuideRound" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textSize="@dimen/sp_28" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
