--- a/app/src/main/res/drawable/shape_gradient_ff1da8fe_ff266edc_corners_12dp.xml
+++ b/app/src/main/res/drawable/shape_gradient_ff1da8fe_ff266edc_corners_12dp.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="12dp" />
+    <corners
+        android:topLeftRadius="12dp"
+        android:topRightRadius="12dp"/>
     <gradient
         android:angle="90"
         android:endColor="#FF1DA8FE"
-        android:startColor="#FF295DD2" />
+        android:startColor="#FF266EDC" />
 </shape>
