--- a/app/src/main/res/layout/fragment_go_back.xml
+++ b/app/src/main/res/layout/fragment_go_back.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="wakeUpName"
+            type="com.sendi.deliveredrobot.entity.entitySql.QuerySql" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayoutGoBack"
@@ -42,17 +44,77 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="36dp"
+                android:text="@string/i_can_offer_this_service"
+                android:textSize="@dimen/sp_48"
+                android:textColor="@color/color_E5FFFFFF"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons"
+                app:layout_constraintEnd_toEndOf="@+id/constraintLayoutPause"
+                app:layout_constraintStart_toStartOf="@+id/constraintLayoutPause"
+                app:layout_constraintTop_toTopOf="@+id/constraintLayoutPause"
+                app:layout_constraintVertical_bias="1.0" />
+
             <LinearLayout
                 android:id="@+id/linearLayoutButtons"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginBottom="136dp"
                 android:gravity="center_horizontal"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutPause"
                 app:layout_constraintEnd_toEndOf="@+id/constraintLayoutPause"
                 app:layout_constraintStart_toStartOf="@+id/constraintLayoutPause"
-                app:layout_constraintTop_toTopOf="@+id/constraintLayoutPause">
+                app:layout_constraintTop_toTopOf="@+id/constraintLayoutPause"
+                app:layout_constraintVertical_bias="1.0">
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:layout_marginStart="@dimen/dp_48"
+                android:layout_marginBottom="@dimen/dp_28"
+                android:src="@drawable/horn_svg"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView61"
+                android:text="@{@string/ask(wakeUpName.robotConfig().wakeUpWord)}"
+                android:textColor="@color/white"
+                android:textStyle="normal"
+                android:alpha="0.7"
+                android:layout_marginStart="@dimen/dp_14"
+                android:textSize="@dimen/sp_24"
+                android:gravity="center"
+                android:shadowColor="@color/red"
+                android:shadowRadius="10.0"
+                android:shadowDx="50.0"
+                android:shadowDy="30.0"
+                android:singleLine="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:ellipsize="marquee"
+                android:clickable="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:layout_width="@dimen/dp_320"
+                android:layout_height="wrap_content"
+                tools:text="@string/ask"
+                android:background="@drawable/rectangle"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+                app:layout_constraintStart_toEndOf="@+id/imageView8" >
+                <requestFocus />
+            </TextView>
+
+            <ImageView
+                android:layout_width="@dimen/dp_6"
+                android:layout_height="@dimen/dp_7"
+                android:src="@drawable/rt_horn"
+                app:layout_constraintBottom_toBottomOf="@+id/textView61"
+                app:layout_constraintEnd_toStartOf="@+id/textView61" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
